More steps toward removing guava